# splitaroo

./: .gitignore  Dockerfile  Makefile  README.md  calculations.py  conftest.py  hf.py  llm.py  main.py  models.py  pyproject.toml  routers.py  sample_responses.py  types.py
.github/: lint.yaml
.github/workflows/: lint.yaml  tests.yaml
app/: conftest.py  main.py  main_test.py
app/api/routes/: routers.py  routers_test.py
app/core/: calculations.py  calculations_test.py  guardrails.py  guardrails_test.py  llm.py  llm_test.py
app/schemas/: models.py  models_test.py
