[project]
name = "buddysplit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "boto3>=1.42.89",
    "botocore>=1.42.89",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "openai>=2.29.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "requests>=2.33.0",
]
[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
[tool.pytest.ini_options]
testpaths = ["app"]
pythonpath = ["."]
addopts = "-v --tb=short"
python_files="*_test.py"

[dependency-groups]
dev = [
    "pytest-httpserver>=1.1.5",
]
